<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mainmenu"
    tools:context=".view.MainActivity">

    <!-- Floating Particles Effect -->
    <com.lokixcz.optilearn.view.FloatingParticlesView
        android:id="@+id/floatingParticles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
    android:contentDescription="@string/main_menu_title"
        android:layout_marginTop="60dp"
        android:src="@drawable/optilearn_logo"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Master the World of Light!"
        android:textColor="#CCFFFFFF"
        android:textSize="16sp"
        android:fontFamily="@font/pixelated_display"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <!-- Game Action Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintVertical_bias="0.2">

        <!-- Play Button -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnPlay"
            android:layout_width="@dimen/menu_button_max_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_play"
            android:layout_gravity="center"
            android:maxWidth="@dimen/menu_button_max_width"
            android:maxHeight="@dimen/menu_button_max_height"
            android:minWidth="@dimen/menu_button_min_width"
            android:minHeight="@dimen/menu_button_min_height"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/play_btn" />

        <!-- Trophy Room Button -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnTrophyRoom"
            android:layout_width="@dimen/menu_button_max_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_trophy_room"
            android:layout_gravity="center"
            android:maxWidth="@dimen/menu_button_max_width"
            android:maxHeight="@dimen/menu_button_max_height"
            android:minWidth="@dimen/menu_button_min_width"
            android:minHeight="@dimen/menu_button_min_height"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/trophyroom_btn" />

        <!-- Settings Button -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSettings"
            android:layout_width="@dimen/menu_button_max_width"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_settings"
            android:layout_gravity="center"
            android:maxWidth="@dimen/menu_button_max_width"
            android:maxHeight="@dimen/menu_button_max_height"
            android:minWidth="@dimen/menu_button_min_width"
            android:minHeight="@dimen/menu_button_min_height"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settings_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
